--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 				    </div><!--//media-->
 			    </div><!--//item-->
 			    -->
-			    <div class="item mb-5">
+			<!--    <div class="item mb-5">
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-5.jpg" alt="image">
 					    <div class="media-body">
@@ -138,8 +138,8 @@
 					    </div><!--//media-body-->
 				    </div><!--//media-->
 			    </div><!--//item-->
-			    
-			    <div class="item">
+			 -->   
+			<!--    <div class="item">
 				    <div class="media">
 					    <img class="mr-3 img-fluid post-thumb d-none d-md-flex" src="assets/images/blog/blog-post-thumb-6.jpg" alt="image">
 					    <div class="media-body">
@@ -151,6 +151,7 @@
 				    </div><!--//media-->
 			    </div><!--//item-->
 			    -->
+                           
 			    <nav class="blog-nav nav nav-justified my-5">
 				  <a class="nav-link-prev nav-item nav-link d-none rounded-left" href="#">Previous<i class="arrow-prev fas fa-long-arrow-alt-left"></i></a>
 				  <a class="nav-link-next nav-item nav-link rounded" href="blog-list.html">Next<i class="arrow-next fas fa-long-arrow-alt-right"></i></a>
